# SlipsharkAI

./: .cursorrules  .dockerignore  .env.example  .gitignore  .tool-versions  DEPLOYMENT.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  condaenv.r8ogg3eu.requirements.txt  debug_env.py  docker-compose.yml  dump.rdb  environment.yml  exa.py  exa_search.py  fix_directory_structure.py  generate_key.py  main.py  perplexity.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  setup_env.sh  test_functions.py  test_perplexity.py
.cursor/rules/: api-sports-basketball.mdc  api-sports-nba.mdc  backend-schema.mdc  database-rls-policies.mdc  example-tool-call-with-exa.mdc  goalserve-basketball-docs.mdc  goalserve-basketball-urls.mdc  prompt-chaining-example.mdc  working-with-perplexity.mdc
.github/workflows/: ci.yml
app/: __init__.py  api.py  config.py
app/Functions/: __init__.py  llm_functions.py
app/chains/: base_chain.py
app/config/: __init__.py  auth.py  langfuse_init.py  logging_config.py  rate_limit.py
app/middleware/: README.md  __init__.py  auth.py  usage_tracking.py
docs/: restoration-baseline.md
scripts/: __init__.py  demo.py  generate_api_key.py  init_prompts.py  smoke.py  test_auth_workflow.py  test_betting.sh  verify
services/: auth_service.py
tests/: README.md  __init__.py  run_workflow_test.py  test_api_sports.py  test_basketball_service_api.py  test_basketball_service_live.py  test_caching.py  test_config.py  test_deployment_contract.py  test_entrypoint.py  test_generate_key.py  test_load.py
workflow/: exa_search.py
(+77 files in other folders)
