[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project]
name = "slipshark"
version = "0.1.0"
description = "A bounded sports research service."
readme = "README.md"
requires-python = ">=3.12.13,<3.13"
dependencies = [
    "fastapi>=0.139.0,<1",
    "httpx>=0.28.1,<1",
    "openai>=2.45.0,<3",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.2,<3",
    "redis>=8.0.1,<9",
    "uvicorn>=0.51.0,<1",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0,<3",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "ruff>=0.15.21,<1",
]

[tool.mypy]
files = ["src/slipshark"]
mypy_path = "src"
pretty = true
python_version = "3.12"
show_error_codes = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.uv]
required-version = "==0.8.18"
